[package]
name = "dwarf122"
description = "DWARF 1 to DWARF 2 converter."
authors = ["David Balatoni"]
license = "MIT OR Apache-2.0"
version = "0.0.1"
edition = "2021"
publish = false
repository = "https://github.com/dbalatoni13/dwarf122"
readme = "README.md"
categories = ["command-line-utilities"]
rust-version = "1.81"

[[bin]]
name = "dwarf122"
path = "src/main.rs"

[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = "debuginfo"
codegen-units = 1

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ar = { git = "https://github.com/bjorn3/rust-ar.git", branch = "write_symbol_table" }
argp = "0.3"
typed-path = "0.9"
dyn-clone = "1.0"
enable-ansi-support = "0.2"
filetime = "0.2"
glob = "0.3"
hex = "0.4"
log = "0.4"
memmap2 = "0.9"
nodtool = "1.4"
num_enum = "0.7"
object = { version = "0.38.1", features = ["read_core", "std", "elf", "write_std", "build"], default-features = false }
owo-colors = { version = "4.1", features = ["supports-colors"] }
sha-1 = "0.10"
supports-color = "3.0"
syntect = { version = "5.2", features = ["parsing", "regex-fancy", "dump-load"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zerocopy = { version = "0.8", features = ["derive"] }
gimli = "0.32.3"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1"
